<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="5"
    android:columnCount="4"
    android:orientation="vertical"
    tools:context="com.utng.dmanzano.evaluacin1.GridActivity"
    android:background="#99CCFF">

    <EditText
        android:layout_columnSpan="4"
        android:id="@+id/edt_data"
        android:hint="@string/cero"
        android:layout_width="match_parent"
        android:background="#FFFF"/>

    <Button
        android:text="@string/num_7"
        android:textSize="@dimen/num_size"
        android:id="@+id/btn_7" />
    <Button
        android:text="@string/num_8"
        android:textSize="@dimen/num_size"
        android:id="@+id/btn_8"/>
    <Button
        android:text="9"
        android:textSize="@dimen/num_size"
        android:id="@+id/btn_9"/>
    <Button
        android:text="x"
        android:textSize="@dimen/num_size"
        android:id="@+id/btn_multi"/>

    <Button
        android:text="4"
        android:textSize="@dimen/num_size"
        android:id="@+id/btn_4"/>
    <Button
        android:text="5"
        android:textSize="@dimen/num_size"
        android:id="@+id/btn_5"/>
    <Button
        android:text="6"
        android:textSize="@dimen/num_size"
        android:id="@+id/btn_6"/>
    <Button
        android:text="-"
        android:textSize="@dimen/num_size"
        android:id="@+id/btn_minos"/>

    <Button
        android:text="1"
        android:textSize="@dimen/num_size"
        android:id="@+id/btn_1"/>
    <Button
        android:text="2"
        android:textSize="@dimen/num_size"
        android:id="@+id/btn_2"/>
    <Button
        android:text="3"
        android:textSize="@dimen/num_size"
        android:id="@+id/btn_3"/>
    <Button
        android:text="+"
        android:textSize="@dimen/num_size"
        android:id="@+id/btn_mas"/>

    <Button
        android:text="/"
        android:textSize="@dimen/num_size"
        android:id="@+id/btn_div"/>
    <Button
        android:text="0"
        android:textSize="@dimen/num_size"
        android:id="@+id/btn_0"/>
    <Button
        android:text="."
        android:textSize="@dimen/num_size"
        android:id="@+id/btn_punto" />
    <Button
        android:text="="
        android:textSize="@dimen/num_size"
        android:id="@+id/btn_igual"/>
</GridLayout>
